--- a/index.html
+++ b/index.html
@@ -23,17 +23,7 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.pjax/1.9.6/jquery.pjax.min.js" integrity="sha256-Xuf/Wtp4J0pHH1OolTHfRbWP2FkR6WaB69ut7w4FxpY=" crossorigin="anonymous"></script>
    <script src="assets/js/custom.js"                             type="text/javascript"></script>
 <!--
-   <style>
-      #preloader {
-         position: fixed;
-         left: 0;
-         top: 0;
-         z-index: 99999;
-         width: 100%;
-         height: 100%;
-         overflow: visible;
-         background: #666666 url("assets/custom/images/preloader.gif") no-repeat center center; }
-   </style>
+   // COMS W4156 commit
 -->
 </head>
 
