--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <title>Andrei Oprisan | Welcome</title>
 
    <meta name="description" content="Andrei Oprisan Website">
-   <meta name="keywords" content="technology, management, design thinking, design, boston tech, product, engineer, leader, andrei oprisan">
+   <meta name="keywords" content="technology, management, design thinking, design, boston tech, product, engineer, leader, andrei oprisan, machine learning engineer, artificial intelligence">
    <meta name="author" content="Andrei Oprisan">
 
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -23,7 +23,17 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.pjax/1.9.6/jquery.pjax.min.js" integrity="sha256-Xuf/Wtp4J0pHH1OolTHfRbWP2FkR6WaB69ut7w4FxpY=" crossorigin="anonymous"></script>
    <script src="assets/js/custom.js"                             type="text/javascript"></script>
 <!--
-   // COMS W4156 commit
+   <style>
+      #preloader {
+         position: fixed;
+         left: 0;
+         top: 0;
+         z-index: 99999;
+         width: 100%;
+         height: 100%;
+         overflow: visible;
+         background: #666666 url("assets/custom/images/preloader.gif") no-repeat center center; }
+   </style>
 -->
 </head>
 
@@ -126,10 +136,10 @@
                <div class="row">
                   <div class="col-lg-12">
                      <br />
-                     <p>Andrei is currently completing his Masters of Science in Computer Science with a Concentration in Machine Learning at <a href="https://www.cs.columbia.edu" target="_blank">Columbia University's School of Engineering and Applied Science</a>. He was previously a graduate student at Johns Hopkins University, studying Artificial Intelligence. He previously studied computer science at NYU and Boston University.</p>
+                     <p>Andrei is an alumni of Columbia University <a href="https://www.cs.columbia.edu" target="_blank">Fu Foundation School of Engineering and Applied Science</a>, with a Masters of Science in Computer Science with a Concentration in Machine Learning. He previously studied computer science at NYU and Boston University.</p>
                   </div>
                </div>
-               
+
             </div>
          </div>
 
@@ -279,7 +289,7 @@
                   </div>
                   <div class="divider-dynamic"></div>
                </div>
-               
+
                <div class="col-md-12 wow fadeInLeft" data-wow-delay="0.5s" data-wow-offset="10">
                   <div class="row">
                      <div class="col-xs-12">
