--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                            Wayfair
                         </a>
                      </li>
-                     <li class="position">Head of Global Sales R&D<br/>Product, Engineering, BI & Design</li>
+                     <li class="position">Head of Global Sales R&D</li>
                   </ul>
                   <ul class="">
                      <li class="date">2017-2019</li>
@@ -188,37 +188,19 @@
                      <li class="date">2013 - 2015</li>
                      <li class="company uppercase">
                         <a>
-                           Optaros, an MRM/McCann eCommerce agency
+                           Optaros, an MRM Commerce agency
                         </a>
                      </li>
                      <li class="position">Tech Lead</li>
                   </ul>
                   <ul>
-                     <li class="date">2012</li>
+                     <li class="date">2010-2012</li>
                      <li class="company uppercase">
                         <a>
                            Wayfair
                         </a>
                      </li>
-                     <li class="position">Software Engineer, Storefront</li>
-                  </ul>
-                  <ul>
-                     <li class="date">2010 - 2012</li>
-                     <li class="company uppercase">
-                        <a>
-                           Lycos
-                        </a>
-                     </li>
-                     <li class="position">Software Engineer, Infrastructure</li>
-                  </ul>
-                  <ul>
-                     <li class="date">2006 - 2010</li>
-                     <li class="company uppercase">
-                        <a>
-                           NYU
-                        </a>
-                     </li>
-                     <li class="position">Software Developer</li>
+                     <li class="position">Software Engineer</li>
                   </ul>
                </div>
                <div class="dividewhite1"></div>
