--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                <div class="dividewhite4"></div>
                <div class="experience">
                   <ul class="">
-                     <li class="date">since 2020</li>
+                     <li class="date">2020-2022</li>
                      <li class="company uppercase">
                         <a>
                            OneScreen.AI
