--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
    <title>Andrei Oprisan | Welcome</title>
 
-   <meta name="description" content="Andrei Oprisan Website">
+   <meta name="description" content="Andrei Oprisan">
    <meta name="keywords" content="technology, management, design thinking, design, boston tech, product, engineer, leader, andrei oprisan, machine learning engineer, artificial intelligence">
    <meta name="author" content="Andrei Oprisan">
 
@@ -70,8 +70,9 @@
                            <b>Builder.</b>
                            <b>Applied Machine Learning.</b>
                            <b>Engineer.</b>
-                           <b>Head of Golbal Sales R&D.</b>
+                           <b>Head of Global Sales R&D.</b>
                            <b>Product Engineering.</b>
+                           <b>Machine Learning Architect.</b>
                            <b>Product, Engineering & Design.</b>
                            <b>Product Entrepreneur.</b>
                            <b>VP of Technology.</b>
@@ -136,7 +137,7 @@
                <div class="row">
                   <div class="col-lg-12">
                      <br />
-                     <p>Andrei is an alumni of Columbia University <a href="https://www.cs.columbia.edu" target="_blank">Fu Foundation School of Engineering and Applied Science</a>, with a Masters of Science in Computer Science with a Concentration in Machine Learning. He previously studied computer science at NYU and Boston University.</p>
+                     <p>Andrei is an MIT Sloan MBA student and an alumni of Columbia University <a href="https://www.cs.columbia.edu" target="_blank">Fu Foundation School of Engineering and Applied Science</a>, with a Masters of Science in Computer Science with a Concentration in Machine Learning. He previously studied computer science at NYU and Boston University.</p>
                   </div>
                </div>
 
