--- a/index.html
+++ b/index.html
@@ -124,10 +124,11 @@
                <div class="row">
                   <div class="col-lg-12">
                      <br />
-                     <p>Technology professional with 10+ years of software engineering experience, managing engineering teams of high performance web, mobile, and infrastructure engineers.<br><br>
-                     He has experience managing multiple technical platforms and migrating to newer ones when needed, with experience scaling an engineering organization in a high-growth environment, both as remote contractors and full-time employees. He puts his strong consensus building skills, negotiation, and decision-making skills, coupled with sound judgment, to good use to help grow teams, while being able to both code and mentor and lead engineers at the technical level.</p>
+                     <p>Technology professional with 15+ years of software engineering experience, managing engineering teams of high performance web, mobile, and infrastructure engineers.<br><br>
+                     <p>He has experience managing multiple technical platforms and migrating to newer ones when needed, while scaling product and engineering organizations in high-growth environments.</p>
+                     <p>He co-founded OneScreen.AI with a few early HubSpot co-workers, the B2B SaaS marketplace for out-of-home advertising, and scaled it from to $10M+ in annual revenue and helped fundraise over $8M from angels and VCs with a team of 40+.</p>
                      <p>At Wayfair, Andrei led the global sales research and development department, across product, engineering, business intelligence and design functions. His department was focused on building Wayfair's moat through sales-agent driven sales, provinding a higher touch, personalized and vertical integrated experience for B2B and specialized B2C sales. The Sales R&D team supported a $2B annualized business, while Wayfair was a $10B run rate business. He was part of Wayfair's senior executive leadership team, with interim reporting to the CTO. He scaled the sales R&D teams from 8 engineers to 100+ within 9 months.</p>
-                     <p>As the VP of technology leading digital for Global Retail Markets - US at Liberty Mutual Insurance, Andrei led a customer centric transformation of digital teams, leading all digital customer facing applications and systems for Liberty Mutual and Safeco brands, and oversees the 250 person strong Boston Tech Hub that he built out. He was part of Liverty Mutual's senior executive leadership team, reporting to the GRM US CIO. He scales the Boston teams from 6 people to over 200 in 18 months.</p>
+                     <p>As the VP of Technology leading digital for US retail markets at Liberty Mutual Insurance, Andrei led a customer centric transformation of digital teams, leading all digital customer facing applications and systems for Liberty Mutual and Safeco brands, and oversees the 250 person strong Boston Tech Hub that he built out. He was part of Liverty Mutual's senior executive leadership team, reporting to the GRM US CIO. He scales the Boston teams from 6 people to over 200 in 18 months.</p>
                      <p>At HubSpot Labs, the startup incubator within HubSpot, he helped build the largest marketing community platform, among other R&D projects. And in earlier roles, Andrei was a hands-on engineering leader, building core platform capabilities, and interfacing with business leaders to drive meaningful business-impacting solutions.</p>
                   </div>
                </div>
@@ -152,10 +153,17 @@
                   <ul class="">
                      <li class="company uppercase">
                         <a>
+                           eli.ai
+                        </a>
+                     </li>
+                     <li class="position">Founder</li>
+                  </ul><ul class="">
+                     <li class="company uppercase">
+                        <a>
                            OneScreen.AI
                         </a>
                      </li>
-                     <li class="position">CTO</li>
+                     <li class="position">Co-founder & CTO</li>
                   </ul>
                   <ul class="">
                      <li class="company uppercase">
